# taskwarrior-tui

./: .editorconfig  .env  .envrc  .gitignore  .justfile  .mise.toml  .rustfmt.toml  404.html  CHANGELOG.md  Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  build.rs  index.html  mkdocs.yml  sitemap-0.xml  sitemap-index.xml  sitemap.xml  taskwarrior-tui.desktop
.config/: config.json5  mise.toml
.config/mise/tasks/: build-taskwarrior  check-rust  ci  clean  clippy-strict  coverage-lcov  docs-build  ensure-rust-toolchain  fmt-check  format  import-taskdata  lint  man  package-aur  package-deb  package-rpm  run-taskdata  test
.config/mise/tasks/taskwarrior-tui/: build-taskwarrior  check-rust  ci  clean  clean-demo-taskdata  clean-taskdata  clean-tests  clippy-strict  coverage-lcov  docs-build  ensure-rust-toolchain  fmt-check  format  import-taskdata  lint  man  package-aur  package-deb  package-rpm  run-taskdata  setup-demo-taskdata  setup-testdata  test  vhs
.github/: CODEOWNERS  FUNDING.yml  appimage-builder.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/install-taskwarrior/: action.yml
.github/workflows/: build.yml  cd.yml  check-pr.yml  ci.yml  docs.yml  generate_coverage.yml  release-plz.yml
.rpm/: taskwarrior-tui.spec
_astro/: Search.astro_astro_type_script_index_0_lang.DXce6lHG.js  index@_@astro.EZxgmfMq.css  ui-core.DIt31_FR.js
completions/: _taskwarrior-tui  _taskwarrior-tui.ps1  taskwarrior-tui.bash  taskwarrior-tui.fish
configuration/advanced/: index.html
configuration/colors/: index.html
configuration/keys/: index.html
developer/guide/: index.html
docs/: astro.config.mjs  faqs.md  index.md  installation.md  keybindings.md  package-lock.json  package.json  quick_start.md  taskwarrior-tui.1  taskwarrior-tui.1.md
docs/configuration/: advanced.md  colors.md  keys.md
docs/developer/: guide.md
docs/src/content/docs/: faqs.md  index.mdx  installation.md  keybindings.md  quick_start.md  troubleshooting.md
docs/src/content/docs/configuration/: advanced.md  colors.md  keys.md
docs/src/content/docs/developer/: guide.md
docs/src/pages/: 404.astro
faqs/: index.html
installation/: index.html
keybindings/: index.html
packaging/man/: taskwarrior-tui.1  taskwarrior-tui.1.md
packaging/vhs/: basic-features.tape
pagefind/: pagefind-entry.json  pagefind.en_1caf25700f.pf_meta  pagefind.en_3a5a29d67e.pf_meta  pagefind.en_40d0a8e13f.pf_meta
pagefind/fragment/: en_137c163.pf_fragment  en_44a9fc5.pf_fragment  en_51cb2ac.pf_fragment  en_53b53e4.pf_fragment  en_57c91d6.pf_fragment  en_8f112e1.pf_fragment  en_a74685d.pf_fragment  en_c2c91b8.pf_fragment  en_eb7c33f.pf_fragment  en_ec8799e.pf_fragment
pagefind/index/: en_5995421.pf_index  en_abdf6df.pf_index  en_e01623f.pf_index
quick_start/: index.html
scripts/: build_docs.py  build_taskwarrior.py  ensure_rust_toolchain.py  setup_testdata.sh
search/: search_index.json
snap/: snapcraft.yaml
src/: action.rs  app.rs  calendar.rs  cli.rs  color.rs  column_menu.rs  command.rs  completion.rs  components.rs  config.rs  context.rs  datetime.rs  event.rs  handler.rs  help.rs  help.tmpl  history.rs  keyconfig.rs  keyevent.rs  keymap.rs  lib.rs  line_buffer.rs  main.rs  report_style.rs  runner.rs  scrollbar.rs  table.rs  task_report.rs  traits.rs  tui.rs  ui.rs  util.rs  utils.rs
src/components/: app.rs  task_details.rs  task_report.rs
src/pane/: context.rs  mod.rs  project.rs  report.rs
taskwarrior-tui.1/: index.html
troubleshooting/: index.html
