[package]
name = "taskwarrior-tui"
version = "0.26.3"
license = "MIT"
description = "A Taskwarrior Terminal User Interface"
repository = "https://github.com/kdheepak/taskwarrior-tui/"
homepage = "https://kdheepak.com/taskwarrior-tui"
readme = "README.md"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>"]
edition = "2018"
keywords = ["taskwarrior", "tui"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.86"
better-panic = "0.3.0"
cassowary = "0.3.0"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
path-clean = "1.0.1"
rand = "0.8.5"
regex = "1.10.6"
rustyline = { version = "14.0.0", features = ["with-file-history", "derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
shellexpand = "3.1.0"
shlex = "1.3.0"
task-hookrs = "0.9.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
ratatui = "0.27"
unicode-segmentation = "1.11.0"
unicode-truncate = "1.1.0"
unicode-width = "0.1.13"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
versions = "6.3.2"

[package.metadata.rpm]
package = "taskwarrior-tui"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
taskwarrior-tui = { path = "/usr/bin/taskwarrior-tui" }

[profile.release]
debug = 1
incremental = true
lto = "fat"

[build-dependencies]
clap = { version = "4.5.15", features = ["derive"] }
clap_complete = "4.5.15"
shlex = "1.3.0"
