[package]
name = "taskwarrior-tui"
version = "0.26.5"
license = "MIT"
description = "A Taskwarrior Terminal User Interface"
repository = "https://github.com/kdheepak/taskwarrior-tui/"
homepage = "https://kdheepak.com/taskwarrior-tui"
readme = "README.md"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>", "Etherbloom <etherbloom@mailbox.org>"]
edition = "2018"
keywords = ["taskwarrior", "tui"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.100"
better-panic = "0.3.0"
cassowary = "0.3.0"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
log4rs = "1.4.0"
path-clean = "1.0.1"
rand = "0.9.2"
regex = "1.12.2"
rustyline = { version = "17.0.2", features = ["with-file-history", "derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
shlex = "1.3.0"
task-hookrs = "0.9.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
ratatui = "0.30"
unicode-segmentation = "1.12.0"
unicode-truncate = "2.0.1"
unicode-width = "0.2.2"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
versions = "7.0.0"

[package.metadata.rpm]
package = "taskwarrior-tui"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
taskwarrior-tui = { path = "/usr/bin/taskwarrior-tui" }

[profile.release]
debug = 1
incremental = true
lto = "fat"

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
shlex = "1.3.0"
