[package]
name = "taskwarrior-tui"
version = "0.27.0"
license = "MIT"
description = "A Taskwarrior Terminal User Interface"
repository = "https://github.com/kdheepak/taskwarrior-tui/"
homepage = "https://kdheepak.com/taskwarrior-tui"
readme = "README.md"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>", "Etherbloom <etherbloom@mailbox.org>"]
edition = "2024"
keywords = ["taskwarrior", "tui"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.102"
better-panic = "0.3.0"
chrono = "0.4.44"
clap = "4.6.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
itertools = "0.14.0"
kasuari = "0.4.12"
log = "0.4.29"
log4rs = "1.4.0"
path-clean = "1.0.1"
regex = "1.12.3"
rustyline = { version = "18.0.0", features = ["with-file-history"] }
serde = { version = "1.0.193", features = ["derive"] }
shellexpand = "3.1.2"
shlex = "1.3.0"
task-hookrs = "0.9.0"
tokio = { version = "1.52.1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
ratatui = "0.30"
unicode-segmentation = "1.13.2"
unicode-truncate = "2.0.1"
unicode-width = "0.2.2"
uuid = "1.23.1"
versions = "7.0.0"

[package.metadata.rpm]
package = "taskwarrior-tui"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
taskwarrior-tui = { path = "/usr/bin/taskwarrior-tui" }

[profile.release]
debug = 1
incremental = true
lto = "fat"

[build-dependencies]
clap = "4.6.1"
clap_complete = "4.6.3"
shlex = "1.3.0"
